Bug 17655 - abidiff fails to run on library libgvplugin_neato_layout.so
Summary: abidiff fails to run on library libgvplugin_neato_layout.so
Status: RESOLVED FIXED
Alias: None
Product: libabigail
Classification: Unclassified
Component: default (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Dodji Seketeli
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-27 11:44 UTC by Sinny Kumari
Modified: 2014-12-11 15:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sinny Kumari 2014-11-27 11:44:18 UTC
Running abidiff on libgvplugin_neato_layout.so libs fails with following error message

abidiff: ../../src/abg-dwarf-reader.cc:4456: void abigail::dwarf_reader::get_parent_die(abigail::dwarf_reader::read_context&, Dwarf_Die*, bool, Dwarf_Die&, size_t): Assertion `i != ctxt.die_parent_map().end()' failed.
Aborted

RPMs used for libs
-----------------
rpm1 - https://kojipkgs.fedoraproject.org//packages/graphviz/2.30.1/13.fc19/x86_64/graphviz-2.30.1-13.fc19.x86_64.rpm
debuginfo - https://kojipkgs.fedoraproject.org//packages/graphviz/2.30.1/13.fc19/x86_64/graphviz-debuginfo-2.30.1-13.fc19.x86_64.rpm

rpm2 - https://kojipkgs.fedoraproject.org//packages/graphviz/2.34.0/10.fc20/x86_64/graphviz-2.34.0-10.fc20.x86_64.rpm
debuginfo - https://kojipkgs.fedoraproject.org//packages/graphviz/2.34.0/10.fc20/x86_64/graphviz-debuginfo-2.34.0-10.fc20.x86_64.rpm